# MLRun

./: .clippy.toml  .dockerignore  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  branches.md  buf.gen.yaml  buf.yaml  pyproject.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  epic.yml  feature.yml
.github/workflows/: ci.yml  nightly.yml  release.yml
apps/api/: Cargo.toml
apps/api/src/: config.rs  main.rs
apps/api/src/auth/: mod.rs
apps/api/src/services/: idempotency.rs  ingest.rs  limits.rs  metrics.rs  mod.rs
apps/api/src/storage/: clickhouse.rs  minio.rs  mod.rs  postgres.rs
apps/ui/: .gitignore  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
apps/ui/__tests__/: page.test.tsx
apps/ui/src/app/: globals.css  layout.tsx  page.tsx
apps/ui/src/app/compare/: page.tsx
apps/ui/src/app/runs/[run_id]/: page.tsx
apps/ui/src/components/: ComparePanel.tsx  MetricChartPanel.tsx  RunHeader.tsx  RunsTable.tsx
apps/ui/src/components/charts/: ChartControls.tsx  UPlotChart.tsx  index.ts
apps/ui/src/components/dashboard/: ChartCard.tsx  DashboardLayout.tsx  MetricSection.tsx  index.ts
apps/ui/src/lib/: api.ts  metricGroups.ts
bench/generators/: .gitkeep
bench/workloads/: .gitkeep
crates/proto/: Cargo.toml  build.rs
crates/proto/src/: lib.rs
docs/: .gitkeep  architecture.md  privacy.md  storage_defaults.md  testing.md
docs/ops/: local_backup.md
docs/spec/: .gitkeep  ingest.md  limits.md  query.md
infra/docker/: .env.example  Dockerfile.rust  Dockerfile.ui  docker-compose.yml
infra/docker/clickhouse/: config.xml  users.xml
infra/docker/clickhouse/init/: 01_schema.sql
infra/docker/minio/init/: create_bucket.sh
infra/docker/postgres/init/: 01_schema.sql  02_seed.sql
infra/docker/scripts/: backup.sh  restore.sh
infra/k8s/: .gitkeep  README.md
infra/k8s/base/: api.yaml  clickhouse-migrations-job.yaml  clickhouse.yaml  configmap.yaml  kustomization.yaml  minio.yaml  namespace.yaml  postgres-migrations-job.yaml  postgres.yaml  redis.yaml  ui.yaml
infra/observability/: otel-collector-config.yaml
migrations/clickhouse/: 001_metrics_schema.sql
migrations/mlflow/: .gitkeep
migrations/postgres/: 001_metadata_schema.sql  002_ingest_batches.sql
migrations/wandb/: .gitkeep
proto/: README.md
proto/mlrun/v1/: common.proto  ingest.proto  query.proto
sdks/integrations/: README.md  pyproject.toml
sdks/integrations/src/mlrun_integrations/: __init__.py
sdks/integrations/src/track_integrations/: __init__.py
sdks/integrations/tests/: conftest.py  test_integrations.py
sdks/python/: README.md  pyproject.toml
sdks/python/examples/: grpo_math_custom.py  grpo_math_trl.py  huggingface_text_classification.py  manifold_mlrun.py  pytorch_mnist.py  simple_training.py  system_metrics.py
sdks/python/examples/manifold_src/: __init__.py  hyperspherical.py  main.py  manifold_muon.py
sdks/python/src/mlrun/: __init__.py  batching.py  config.py  queue.py  run.py  spool.py  worker.py
sdks/python/src/mlrun/cli/: __init__.py  doctor.py  init.py
sdks/python/src/mlrun/proto/: __init__.py
sdks/python/src/mlrun/transport/: __init__.py  base.py  http.py
sdks/python/tests/: conftest.py  test_batching.py  test_client.py  test_spool.py
services/ingest/: Cargo.toml
services/ingest/src/: main.rs
services/processor/: Cargo.toml
services/processor/src/: main.rs
tests/contract/: .gitkeep
tests/integration/: .gitkeep  Dockerfile.api  README.md  docker-compose.test.yml  requirements.txt  runner.py
