[workspace]
resolver = "2"
members = [
    "apps/api",
    "crates/proto",
    "services/ingest",
    "services/processor",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# gRPC
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# Internal crates
mlrun-proto = { path = "crates/proto" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database - ClickHouse
clickhouse = { version = "0.13", features = ["lz4", "time"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.27"
opentelemetry-otlp = "0.27"
tracing-opentelemetry = "0.28"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Config
config = "0.15"

# Time
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }

# Utils
uuid = { version = "1.11", features = ["v7", "serde"] }
bytes = "1.9"
futures = "0.3"

# Crypto / Auth
sha2 = "0.10"
hex = "0.4"
rand = "0.9"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
