[project]
name = "mlrun-workspace"
version = "0.1.0"
description = "MLRun - ML experiment tracking platform"
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"

[tool.uv]
managed = true

[tool.uv.workspace]
members = ["sdks/python", "sdks/integrations"]

[tool.uv.sources]
mlrun = { workspace = true }
mlrun-integrations = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=4.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["mlrun", "mlrun_integrations"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["sdks/python/tests", "sdks/integrations/tests", "tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: Unit tests (fast, no external deps)",
    "integration: Integration tests (require running services)",
    "slow: Slow tests (skipped by default)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["sdks/python/src", "sdks/integrations/src"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true
