[package]
name = "mlrun-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "MLRun API gateway and query service"

[dependencies]
# Internal crates
mlrun-proto.workspace = true

# Async runtime
tokio.workspace = true

# Web/gRPC framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
clickhouse.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Config
config.workspace = true

# Utils
chrono.workspace = true
time.workspace = true
uuid.workspace = true

[dev-dependencies]
axum = { workspace = true }
http-body-util = "0.1"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true, features = ["util"] }

[lints]
workspace = true
