[package]
name = "mlrun-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "MLRun protobuf definitions and generated Rust code"

[dependencies]
prost.workspace = true
prost-types = "0.13"
tonic.workspace = true

[build-dependencies]
tonic-build = "0.12"

[lints]
workspace = true
