[project]
name = "mlrun-integrations"
version = "0.1.0"
description = "MLRun integrations for popular ML frameworks"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "MLRun Team" }]
keywords = ["ml", "pytorch-lightning", "hydra", "optuna", "huggingface", "mlops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mlrun>=0.1.0",
]

[project.optional-dependencies]
lightning = ["pytorch-lightning>=2.0"]
hydra = ["hydra-core>=1.3"]
optuna = ["optuna>=3.0"]
huggingface = ["transformers>=4.35", "datasets>=2.14"]
all = [
    "pytorch-lightning>=2.0",
    "hydra-core>=1.3",
    "optuna>=3.0",
    "transformers>=4.35",
    "datasets>=2.14",
]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlrun_integrations"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
