[package]
name = "track-processor"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Track processor service - rollups, downsampling, cardinality guards"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
clickhouse.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true
thiserror.workspace = true
anyhow.workspace = true
config.workspace = true
chrono.workspace = true
uuid.workspace = true

[lints]
workspace = true
